# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import calendarRouter from "./calendar";
+import quotesRouter from "./quotes";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(calendarRouter);
+router.use(quotesRouter);
 
 export default router;
